# CreepyCrawler-Quadruped-Robot

./: README.md
ROS/Crawler_ws/devel/: .catkin  .rosinstall  local_setup.sh
ROS/Crawler_ws/src/urdf/: CreepyCrawler.xml
creepy_crawler/: CMakeLists.txt  package.xml
creepy_crawler/config/: one_leg_control.yaml
creepy_crawler/launch/: creepy_crawler.rviz  creepy_crawler_rviz.launch  my_world.launch  one_leg_control.launch  one_leg_rviz.launch  one_leg_world.launch
creepy_crawler/models/creepy_crawler_bot/: creepy_crawler.gazebo  creepy_crawler.xacro
creepy_crawler/models/creepy_crawler_bot/sdf/: model.config  model.sdf
creepy_crawler/models/one_leg/: one_leg.gazebo  one_leg.xacro
creepy_crawler/src/: trajectory_joint1.mlx  trajectory_joint2_part1.mlx  trajectory_joint2_part2.mlx
creepy_crawler/src/matlab/Project_code_matlab/: Amatrix_programmingassishmentKrishna2.m  Controls_master.m  LangrangiaEq.asv  LangrangiaEq.m  Nandanwar_ProgAssignment1.m  RNE.m  RNE_complete_ground.m  RNE_master.m  RNE_swing.m  Tekumatla_ProgAssignment2_matlab.m  ad.m  adjoint.m  axisangle2rot.m  controls_modeling.m  controls_setpoint.m  controls_traj.m  fkine.m  jacob0.m  jacoba.m  jacobe.m  mode45.m  ode_2linkmani.m  rrbot_control.m  test123  test123.m  twist2ht.m
creepy_crawler/worlds/: my_world.world
src/urdf/: CreepyCrawler.xml
